--- a/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.html
+++ b/tutorials/Other/GEE_Python/02_sdr_timelapse/GEE_SDR_Functions_Timelapse.html
@@ -14579,17 +14579,6 @@ body[data-format='mobile'] .jp-OutputArea-child .jp-OutputArea-output {
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<h1 id="AOP-GEE-Time-Series-Using-Python-geemap">AOP GEE Time Series Using Python geemap<a class="anchor-link" href="#AOP-GEE-Time-Series-Using-Python-geemap">&#182;</a></h1>
-</div>
-</div>
-</div>
-</div>
-<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
-<div class="jp-Cell-inputWrapper">
-<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
-</div>
-<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
-</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
 <hr>
 <p>syncID: 048ec0a5e30842acb2fbf1144454830e
 title: "Intro to AOP Hyperspectral Data in Google Earth Engine (GEE) using Python geemap"
@@ -14615,8 +14604,7 @@ tutorialSeries:</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<div id="ds-objectives" markdown="1">
-
+<p>div id="ds-objectives" markdown="1"&gt;</p>
 <h3 id="Objectives">Objectives<a class="anchor-link" href="#Objectives">&#182;</a></h3><p>After completing this tutorial, you will be able to use Python to:</p>
 <ul>
 <li>Determine the available AOP Surface Directional Reflectance (SDR) datasets in Google Earth Engine</li>
@@ -14624,31 +14612,24 @@ tutorialSeries:</p>
 <li>Explore the interactive mapping features in geemap</li>
 <li>Create a time-lapse animation of a site</li>
 </ul>
-<h3 id="Requirements">Requirements<a class="anchor-link" href="#Requirements">&#182;</a></h3><p>To follow along with this code, you will need to install <strong>Python 3.x</strong> and sign up for a non-commercial Google Earth Engine account here <a href="https://code.earthengine.google.com/register">https://code.earthengine.google.com/register</a>. This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version.</p>
-<p>This lesson was written in <strong>Jupyter Notebook</strong> so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using <strong>Jupyter</strong>, we recommend using <strong>Spyder</strong>, which has similar functionality.</p>
-<ul>
-<li><p><strong>Install Python 3.x and Jupyter Notebooks</strong> 
-You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href="https://www.anaconda.com/products/distribution" target="_blank">Anaconda</a>.</p>
-</li>
-<li><p><strong>Sign up for a GEE non-commercial account and set up a cloud project</strong></p>
-</li>
-<li><p><strong>Install required Python packages</strong></p>
-<ul>
+<h3 id="Requirements">Requirements<a class="anchor-link" href="#Requirements">&#182;</a></h3><p>To follow along with this code, you will need to</p>
+<ol>
+<li>Sign up for a non-commercial Google Earth Engine account here <a href="https://code.earthengine.google.com/register">https://code.earthengine.google.com/register</a>.</li>
+<li>Install <strong>Python 3.x</strong></li>
+<li>Install required Python packages (matplotlib, cartopy and the dependent packages are only required for the last optional part of the tutorial, to create a time-lapse gif)<ul>
 <li>ee</li>
 <li>geemap</li>
 <li>matplotlib</li>
+<li>cartopy (dependencies: geos, shapely, pyproj)</li>
 </ul>
 </li>
+</ol>
+<p>Notes:</p>
+<ul>
+<li>This tutorial was developed using Python 3.9, so if you are installing Python for the first time, we recommend that version. This lesson was written in <strong>Jupyter Notebook</strong> so you can run each cell chunk individually, but you can also use a different IDE (Interactive Development Environment) of your choice. If not using <strong>Jupyter</strong>, we recommend using <strong>Spyder</strong>, which has similar functionality. You can install both Python, Jupyter Notebooks, and Spyder by downloading <a href="https://www.anaconda.com/products/distribution" target="_blank">Anaconda</a>.
+If cartopy is not installing using <code>conda install</code> or <code>pip install</code>, you may need to find the wheel file specific to your Python version, eg. <code>pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl</code>.</li>
 </ul>
-<p>The last optional part, to create a time-lapse uses the <code>cartoee</code> package in geemap, which requires the following packages:</p>
-
-<pre><code>* cartopy
-* geos
-* shapely
-* pyproj
-
-</code></pre>
-<p>Note: if cartopy is not installing using conda or pip install, you may need to find the wheel file specific to your Python version, eg. <code>pip install Cartopy-0.20.2-cp39-cp39-win_amd64.whl</code>.</p>
+<p>&lt;/div&gt;</p>
 
 </div>
 </div>
@@ -14704,7 +14685,7 @@ You can install both Python, Jupyter Notebooks, and Spyder by downloading <a hre
 <div class="jp-RenderedHTMLCommon jp-RenderedHTML jp-OutputArea-output " data-mime-type="text/html">
 <p>To authorize access needed by Earth Engine, open the following
         URL in a web browser and follow the instructions:</p>
-        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Fj0gPkMu5QQZR1WTRDljX1x5t0gppyIM226EZRAlkOk&tc=ZdOoxqN1TX4IAhonkJyPhBmB2mFqbpblApaaANlQGKk&cc=IiF5DP7z_h083aYtYx1NZevFMjIbV749nvX-HhfIA_U>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=Fj0gPkMu5QQZR1WTRDljX1x5t0gppyIM226EZRAlkOk&tc=ZdOoxqN1TX4IAhonkJyPhBmB2mFqbpblApaaANlQGKk&cc=IiF5DP7z_h083aYtYx1NZevFMjIbV749nvX-HhfIA_U</a></p>
+        <p><a href=https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=29JTRSw80CEK348TTcwJlPDqaHIdjPXqJeNIac3Eu_o&tc=gq9iVEX5TeTTGio9KmMDjN_8iAoivPJxXr0qQkU3C3k&cc=AZ6BzwLn8DmYhXZKvUEcRrcs0yjmgawOyXEEzdNuigg>https://code.earthengine.google.com/client-auth?scopes=https%3A//www.googleapis.com/auth/earthengine%20https%3A//www.googleapis.com/auth/devstorage.full_control&request_id=29JTRSw80CEK348TTcwJlPDqaHIdjPXqJeNIac3Eu_o&tc=gq9iVEX5TeTTGio9KmMDjN_8iAoivPJxXr0qQkU3C3k&cc=AZ6BzwLn8DmYhXZKvUEcRrcs0yjmgawOyXEEzdNuigg</a></p>
         <p>The authorization workflow will generate a code, which you should paste in the box below.</p>
         
 </div>
@@ -14718,7 +14699,7 @@ You can install both Python, Jupyter Notebooks, and Spyder by downloading <a hre
 
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
-<pre>Enter verification code: 4/1AZEOvhWujEw0KJHQqPGBWhn_cELP0Vb2wKTovKfpaCm1VASHSJM2-6Mb7zE
+<pre>Enter verification code: 4/1AZEOvhUYgtVTPzxjbvezubZmrBl5k9kvaNf7FlpUPGnwEWG_ALIYo58YhRY
 
 Successfully saved authorization token.
 </pre>
@@ -14992,9 +14973,7 @@ Years of data available in GEE for site GRSM :
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[9]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># function to read the AOP SDR image collection</span>
-<span class="c1"># selects the data bands and masks to include only the clear-weather data (&lt;10% cloud cover)</span>
-<span class="k">def</span> <span class="nf">sdr_clear_weather</span><span class="p">(</span><span class="n">year</span><span class="p">):</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="k">def</span> <span class="nf">sdr_clear_weather</span><span class="p">(</span><span class="n">year</span><span class="p">):</span>
 
     <span class="c1"># Specify the start and end dates</span>
     <span class="n">start_date</span> <span class="o">=</span> <span class="n">ee</span><span class="o">.</span><span class="n">Date</span><span class="o">.</span><span class="n">fromYMD</span><span class="p">(</span><span class="n">year</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">)</span> 
@@ -15133,6 +15112,18 @@ Adding GRSM 2021 SDR
 </div>
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>Similarly, we will map this function over the list of years, and then add these weather quality images to the Map layer in a loop. For this we can define a color palette that will match AOP's weather stop-light color convention, where green means good weather (&lt;10% cloud cover), yellow is OK (10-50% cloud cover), and red is bad (&gt;50% cloud cover).</p>
+
+</div>
+</div>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
@@ -15348,7 +15339,19 @@ Data available in GEE for site CLBJ :
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>Lastly, optionally, we can create a time-lapse gif of the site over all the collections. This part follows along code from the GeoPython 2021 workshop: <a href="https://geemap.org/workshops/GeoPython_2021/#create-timelapse-animations">https://geemap.org/workshops/GeoPython_2021/#create-timelapse-animations</a>.</p>
+<p>You should now see the Map panel populated with the CLBJ Image Collection and the Weather Quality Band. On your own, explore some of the options by click on the icon in the upper right corner of the map. Some options of interest may be the timelapse (double arrow), ..., and ...</p>
+
+</div>
+</div>
+</div>
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<h3 id="Create--a-Time-Lapse-GIF">Create  a Time-Lapse GIF<a class="anchor-link" href="#Create--a-Time-Lapse-GIF">&#182;</a></h3><p>Lastly, optionally, we can create a time-lapse gif of the site over all the collections. This part follows along code from the GeoPython 2021 workshop: <a href="https://geemap.org/workshops/GeoPython_2021/#create-timelapse-animations">https://geemap.org/workshops/GeoPython_2021/#create-timelapse-animations</a>.</p>
 
 </div>
 </div>
@@ -15378,20 +15381,21 @@ Data available in GEE for site CLBJ :
 <div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[18]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
-<div class=" highlight hl-ipython3"><pre><span></span><span class="n">w</span> <span class="o">=</span> <span class="mf">0.1</span>
+<div class=" highlight hl-ipython3"><pre><span></span><span class="c1"># Define width and height (in degrees)</span>
+<span class="n">w</span> <span class="o">=</span> <span class="mf">0.1</span>
 <span class="n">h</span> <span class="o">=</span> <span class="mf">0.1</span>
 
 <span class="n">region</span> <span class="o">=</span> <span class="p">[</span><span class="n">lon</span> <span class="o">-</span> <span class="n">w</span><span class="p">,</span> <span class="n">lat</span> <span class="o">-</span> <span class="n">h</span><span class="p">,</span> <span class="n">lon</span> <span class="o">+</span> <span class="n">w</span><span class="p">,</span> <span class="n">lat</span> <span class="o">+</span> <span class="n">h</span><span class="p">]</span>
 
 <span class="n">fig</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">figure</span><span class="p">(</span><span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">10</span><span class="p">,</span> <span class="mi">8</span><span class="p">))</span>
 
-<span class="c1"># use cartoee to get a map</span>
+<span class="c1"># Use cartoee to get a map</span>
 <span class="n">ax</span> <span class="o">=</span> <span class="n">geemap</span><span class="o">.</span><span class="n">cartoee</span><span class="o">.</span><span class="n">get_map</span><span class="p">(</span><span class="n">image</span><span class="p">,</span> <span class="n">region</span><span class="o">=</span><span class="n">region</span><span class="p">,</span> <span class="n">vis_params</span><span class="o">=</span><span class="n">visParams</span><span class="p">)</span>
 
-<span class="c1"># add gridlines to the map at a specified interval</span>
+<span class="c1"># Add gridlines to the map at a specified interval</span>
 <span class="n">geemap</span><span class="o">.</span><span class="n">cartoee</span><span class="o">.</span><span class="n">add_gridlines</span><span class="p">(</span><span class="n">ax</span><span class="p">,</span> <span class="n">interval</span><span class="o">=</span><span class="p">[</span><span class="mf">0.05</span><span class="p">,</span> <span class="mf">0.05</span><span class="p">],</span> <span class="n">linestyle</span><span class="o">=</span><span class="s2">&quot;:&quot;</span><span class="p">)</span>
 
-<span class="c1"># add scale bar</span>
+<span class="c1"># Add scale bar</span>
 <span class="n">scale_bar_dict</span> <span class="o">=</span> <span class="p">{</span>
     <span class="s2">&quot;length&quot;</span><span class="p">:</span> <span class="mi">10</span><span class="p">,</span>
     <span class="s2">&quot;xy&quot;</span><span class="p">:</span> <span class="p">(</span><span class="mf">0.1</span><span class="p">,</span> <span class="mf">0.05</span><span class="p">),</span>
@@ -15444,12 +15448,24 @@ jp-needs-light-background
 
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<p>We can then apply these settings and create the timelaps using <code>cartoee.get_image_collection_gif</code> as follows. This will create a "timelapse" subfolder in the Downloads directory.</p>
+
+</div>
+</div>
+</div>
 </div><div class="jp-Cell jp-CodeCell jp-Notebook-cell   ">
 <div class="jp-Cell-inputWrapper">
 <div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
 </div>
 <div class="jp-InputArea jp-Cell-inputArea">
-<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[19]:</div>
+<div class="jp-InputPrompt jp-InputArea-prompt">In&nbsp;[&nbsp;]:</div>
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="n">cartoee</span><span class="o">.</span><span class="n">get_image_collection_gif</span><span class="p">(</span>
@@ -15490,12 +15506,6 @@ jp-needs-light-background
 
 <div class="jp-RenderedText jp-OutputArea-output" data-mime-type="text/plain">
 <pre>Downloading 1/5: 1.png ...
-Downloading 2/5: 2.png ...
-Downloading 3/5: 3.png ...
-Downloading 4/5: 4.png ...
-Downloading 5/5: 5.png ...
-GIF saved to C:\Users\bhass\Downloads\timelapse\clbj_gee_timelapse.gif
-MP4 saved to C:\Users\bhass\Downloads\timelapse\clbj_gee_timelapse.mp4
 </pre>
 </div>
 </div>
@@ -15504,6 +15514,20 @@ MP4 saved to C:\Users\bhass\Downloads\timelapse\clbj_gee_timelapse.mp4
 
 </div>
 
+</div>
+<div class="jp-Cell jp-MarkdownCell jp-Notebook-cell">
+<div class="jp-Cell-inputWrapper">
+<div class="jp-Collapser jp-InputCollapser jp-Cell-inputCollapser">
+</div>
+<div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
+</div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
+<figure>
+  <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-gee-python/intro_gee_py_functions/clbj_gee_timelapse.gif">
+  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/aop-gee-python/intro_gee_py_functions/clbj_gee_timelapse.gif" alt="CLBJ Timelapse" width="500"><figcaption>Time Lapse of CLBJ Surface Directional Reflectance True-Color Images</figcaption></a></figure><h3 id="Recap">Recap<a class="anchor-link" href="#Recap">&#182;</a></h3><p>In this lesson we covered how to read in AOP Surface Directional Reflectance (SDR) datasets into GEE using Python with the pacckages <code>ee</code> and <code>geemap</code>. You learned how to write functions that mask out any data collected in &gt;50% cloud cover conditions, whose reflectance values may differ from reflectance data collected in clear-sky conditions. You also got a chance to explore the interactive mapping tools that are made available as part of geemap. We encourage you to start writing functions and Python code on your own to expand upon these examples!</p>
+
+</div>
+</div>
+</div>
 </div>
 </body>
 
