--- a/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.html
+++ b/tutorials/Python/AOP/Lidar/intro-lidar/mask-rasters/mask-rasters-py.html
@@ -14624,7 +14624,7 @@ After completing this tutorial, you will be able to:
 
 ### Download Data
 
-For this lesson, we will read in a Canopy Height Model data collected at NEON's <a href="https://www.neonscience.org/field-sites/teak" target="_blank">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.
+For this lesson, we will read in Canopy Height Model data collected at NEON's <a href="https://www.neonscience.org/field-sites/teak" target="_blank">Lower Teakettle (TEAK)</a> site in California. This data is downloaded in the first part of the tutorial, using the Python `requests` package.
 
 </div><p><img src="http://neon-workwithdata.github.io/neon-data-institute-2016/images/spatialData/raster_masks.jpg" style="width: 750px;"/></p>
 
@@ -15058,11 +15058,11 @@ For this lesson, we will read in a Canopy Height Model data collected at NEON's 
 <div class="jp-CodeMirrorEditor jp-Editor jp-InputArea-editor" data-type="inline">
      <div class="CodeMirror cm-s-jupyter">
 <div class=" highlight hl-ipython3"><pre><span></span><span class="c1">#Now include additional requirement that slope is North-facing (i.e. aspectNS_array = 1)</span>
-<span class="n">ndvi_gtpt4_Nslope</span> <span class="o">=</span> <span class="n">ndvi_gtpt4</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
-<span class="n">ndvi_gtpt4_Nslope</span><span class="p">[</span><span class="n">aspect_reclass</span> <span class="o">!=</span> <span class="mi">1</span><span class="p">]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">nan</span>
+<span class="n">ndvi_gtpt4_north</span> <span class="o">=</span> <span class="n">ndvi_gtpt4</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
+<span class="n">ndvi_gtpt4_north</span><span class="p">[</span><span class="n">aspect_reclass</span> <span class="o">!=</span> <span class="mi">1</span><span class="p">]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">nan</span>
 
 <span class="n">fig</span><span class="p">,</span> <span class="n">ax</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">6</span><span class="p">,</span><span class="mi">6</span><span class="p">))</span>
-<span class="n">plt</span><span class="o">.</span><span class="n">imshow</span><span class="p">(</span><span class="n">ndvi_gtpt4_Nslope</span><span class="p">,</span><span class="n">extent</span><span class="o">=</span><span class="n">ext</span><span class="p">)</span>
+<span class="n">plt</span><span class="o">.</span><span class="n">imshow</span><span class="p">(</span><span class="n">ndvi_gtpt4_north</span><span class="p">,</span><span class="n">extent</span><span class="o">=</span><span class="n">ext</span><span class="p">)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">colorbar</span><span class="p">();</span> <span class="n">plt</span><span class="o">.</span><span class="n">set_cmap</span><span class="p">(</span><span class="s1">&#39;RdYlGn&#39;</span><span class="p">);</span> 
 <span class="n">plt</span><span class="o">.</span><span class="n">title</span><span class="p">(</span><span class="s1">&#39;TEAK, North Facing &amp; NDVI &gt; 0.4&#39;</span><span class="p">)</span>
 <span class="n">ax</span><span class="o">=</span><span class="n">plt</span><span class="o">.</span><span class="n">gca</span><span class="p">();</span> <span class="n">ax</span><span class="o">.</span><span class="n">ticklabel_format</span><span class="p">(</span><span class="n">useOffset</span><span class="o">=</span><span class="kc">False</span><span class="p">,</span> <span class="n">style</span><span class="o">=</span><span class="s1">&#39;plain&#39;</span><span class="p">)</span> <span class="c1">#do not use scientific notation </span>
@@ -15100,6 +15100,7 @@ Hint: consider both ecological reasons and how the flight acquisition might affe
 <span class="n">ndvi_gtpt4_south</span> <span class="o">=</span> <span class="n">ndvi_gtpt4</span><span class="o">.</span><span class="n">copy</span><span class="p">()</span>
 <span class="n">ndvi_gtpt4_south</span><span class="p">[</span><span class="n">aspect_reclass</span> <span class="o">!=</span> <span class="mi">2</span><span class="p">]</span> <span class="o">=</span> <span class="n">np</span><span class="o">.</span><span class="n">nan</span>
 
+<span class="n">fig</span><span class="p">,</span> <span class="n">ax</span> <span class="o">=</span> <span class="n">plt</span><span class="o">.</span><span class="n">subplots</span><span class="p">(</span><span class="mi">1</span><span class="p">,</span> <span class="mi">1</span><span class="p">,</span> <span class="n">figsize</span><span class="o">=</span><span class="p">(</span><span class="mi">6</span><span class="p">,</span><span class="mi">6</span><span class="p">))</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">imshow</span><span class="p">(</span><span class="n">ndvi_gtpt4_south</span><span class="p">,</span><span class="n">extent</span><span class="o">=</span><span class="n">ext</span><span class="p">)</span>
 <span class="n">plt</span><span class="o">.</span><span class="n">colorbar</span><span class="p">();</span> <span class="n">plt</span><span class="o">.</span><span class="n">set_cmap</span><span class="p">(</span><span class="s1">&#39;RdYlGn&#39;</span><span class="p">);</span> 
 <span class="n">plt</span><span class="o">.</span><span class="n">title</span><span class="p">(</span><span class="s1">&#39;TEAK, South Facing &amp; NDVI &gt; 0.4&#39;</span><span class="p">)</span>
