update intro paragraph + add figures

--- a/tutorials/Python/AOP/RGB-camera/intro-rgb-camera/plot-neon-rgb-camera-data/plot-neon-rgb-camera-data.html
+++ b/tutorials/Python/AOP/RGB-camera/intro-rgb-camera/plot-neon-rgb-camera-data/plot-neon-rgb-camera-data.html
@@ -14604,20 +14604,20 @@ tutorialSeries:</p>
 </div>
 <div class="jp-InputArea jp-Cell-inputArea"><div class="jp-InputPrompt jp-InputArea-prompt">
 </div><div class="jp-RenderedHTMLCommon jp-RenderedMarkdown jp-MarkdownOutput " data-mime-type="text/markdown">
-<p>This tutorial introduces NEON RGB camera images (<a href="https://data.neonscience.org/data-products/DP3.30010.001" target="_blank">Data Product DP3.30010.001</a>) and uses the Python package <code>rasterio</code> to read in and plot the camera data in Python. In this lesson, we will read in an RGB camera tile collected over the NEON Smithsonian Environmental Research Center (SERC) site and plot the mutliband image, as well as the individual bands. This lesson was adapted from the <a href="https://rasterio.readthedocs.io/en/stable/topics/plotting.html" target="_blank">rasterio plotting documentation</a>.</p>
+<p>This tutorial introduces NEON RGB camera images (<a href="https://data.neonscience.org/data-products/DP3.30010.001" target="_blank">Data Product DP3.30010.001</a>) and uses the Python package <code>rasterio</code> to read in and plot the camera data in Python. In this lesson, we will read in an RGB camera tile collected over the NEON Smithsonian Environmental Research Center (<a href="https://www.neonscience.org/field-sites/serc" target="_blank">SERC</a>) site and plot the mutliband image, as well as the individual bands. This lesson was adapted from the <a href="https://rasterio.readthedocs.io/en/stable/topics/plotting.html" target="_blank">rasterio plotting documentation</a>.</p>
 <h3 id="Objectives">Objectives<a class="anchor-link" href="#Objectives">&#182;</a></h3><p>After completing this tutorial, you will be able to:</p>
 <ul>
-<li>Plot a NEON RGB Camera Tile (<a href="https://data.neonscience.org/data-products/DP3.30010.001" target="_blank">Data Product DP3.30010.001</a>) in Python using <code>rasterio</code></li>
+<li>Plot a NEON RGB camera geotiff tile in Python using <code>rasterio</code></li>
 </ul>
 <h3 id="Package-Requirements">Package Requirements<a class="anchor-link" href="#Package-Requirements">&#182;</a></h3><p>This tutorial was run in Python version 3.9, using the following packages:</p>
 <ul>
 <li>rasterio</li>
 <li>matplotlib</li>
 </ul>
-<h3 id="Download-the-Data">Download the Data<a class="anchor-link" href="#Download-the-Data">&#182;</a></h3><p>Download the NEON GeoTiFF file of the 
+<h3 id="Download-the-Data">Download the Data<a class="anchor-link" href="#Download-the-Data">&#182;</a></h3><p>Download the NEON
 <a href="https://storage.googleapis.com/neon-aop-products/2021/FullSite/D02/2021_SERC_5/L3/Camera/Mosaic/2021_SERC_5_368000_4306000_image.tif">camera (RGB) imagery tile</a>
 collected over the Smithsonian Environmental Research Station (SERC) NEON field site in 2021. Move this data to a desired folder on your local workstation. You will need to know the file path to this data.</p>
-<p>Note, the tutorial will also demonstrate how to download the data directly from Python into your working directory, but we recommend re-organizing in a way that makes sense for you.</p>
+<p>You don't have to download from the link above; the tutorial will demonstrate how to download the data directly from Python into your working directory, but we recommend re-organizing in a way that makes sense for you.</p>
 <h3 id="Background">Background<a class="anchor-link" href="#Background">&#182;</a></h3><p>As part of the 
 <a href="https://www.neonscience.org/data-collection/airborne-remote-sensing" target="_blank"> NEON Airborne Operation Platform's</a> 
 suite of remote sensing instruments, the digital camera producing high-resolution (&lt;= 10 cm) photographs of the earth’s surface. The camera records light energy that has reflected off the ground in the visible portion (red, green and blue) of the electromagnetic spectrum. Often the camera images are used to provide context for the hyperspectral and LiDAR data, but they can also be used for research purposes in their own right. One such example is the tree-crown mapping work by Weinstein et al. - see the links below for more information!</p>
@@ -14626,7 +14626,7 @@ suite of remote sensing instruments, the digital camera producing high-resolutio
 <li><a href="https://elifesciences.org/articles/62922" target="_blank">A remote sensing derived data set of 100 million individual tree crowns for the National Ecological Observatory Network</a></li>
 <li><a href="https://besjournals.onlinelibrary.wiley.com/doi/full/10.1111/2041-210X.13472" target="_blank">DeepForest: A Python package for RGB deep learning tree crown delineation</a></li>
 </ul>
-<p>In this lesson we will keep it simple and just show how to read in and plot a single camera RGB tile - a first step in any research incorporating the AOP camera data (in Python).</p>
+<p>In this lesson we will keep it simple and show how to read in and plot a single camera file (1km x 1km ortho-mosaicked tile) - a first step in any research incorporating the AOP camera data (in Python).</p>
 <p><strong>Tip:</strong> To run a code chunk (cell) in Jupyter Notebook you can either select <code>Cell &gt; Run Cells</code> with your cursor placed in the cell you want to run, or use the shortcut key <code>Shift + Enter</code>. For more handy shortcuts, refer to the tab <code>Help &gt; Keyboard Shortcuts</code>.</p>
 
 </div>
