download & explore fix

--- a/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore.html
+++ b/tutorials/R/NEON-general/neon-overview/NEON-download-explore/NEON-download-explore.html
@@ -326,6 +326,13 @@ and Toolik Lake (TOOK).</p>
 data frames. Let’s check out what’s the same and what’s different from the IS
 data tables.</p>
 <pre><code>names(apchem)
+
+##  [1] &quot;apl_biomass&quot;                       &quot;apl_clipHarvest&quot;                  
+##  [3] &quot;apl_plantExternalLabDataPerSample&quot; &quot;apl_plantExternalLabQA&quot;           
+##  [5] &quot;asi_externalLabPOMSummaryData&quot;     &quot;categoricalCodes_20063&quot;           
+##  [7] &quot;citation_20063_RELEASE-2023&quot;       &quot;issueLog_20063&quot;                   
+##  [9] &quot;readme_20063&quot;                      &quot;validation_20063&quot;                 
+## [11] &quot;variables_20063&quot;
 </code></pre>
 <p>As with the sensor data, we have some data tables and some metadata tables.
 Most of the metadata files are the same as the sensor data: <strong>readme</strong>,
