--- a/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/NEON-Boulder-Flood-LiDAR-in-R.html
+++ b/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/NEON-Boulder-Flood-LiDAR-in-R.html
@@ -163,7 +163,7 @@ hr {
 </head>
 
 <body>
-<p>This tutorial focuses on how to visualize digital elevation models derived from
+<p>This tutorial explains how to visualize digital elevation models derived from
 LiDAR data in R. The tutorial is part of the Data Activities that can be used 
 with the 
 <a href="https://www.neonscience.org/overview-disturbance-events-co13flood/" target="_blank"> <em>Quantifying The Drivers and Impacts of Natural Disturbance Events Teaching Module</em></a>. </p>
@@ -175,7 +175,7 @@ After completing this tutorial, you will be able to:
 
 * Plot raster objects in R (this activity is not designed to be an introduction 
 to raster objects in R)
-* Create a Digital Elevation Model of Difference (DoD).
+* Create a Digital Elevation Model Difference Pre- and Post- Flood.
 * Specify color palettes and breaks when plotting rasters in R. 
 
 ### Things You&rsquo;ll Need To Complete This Lesson
@@ -185,9 +185,7 @@ RStudio to write your code.
 
 ### R Libraries to Install:
 
-* **raster:** install.packages(&ldquo;raster&rdquo;)
-* **rgdal:** install.packages(&ldquo;rgdal&rdquo;)
-
+* **terra:** install.packages(&ldquo;terra&rdquo;)
 
 ### Data to Download
 The data for this data activity can be downloaded directly from the 
@@ -232,8 +230,8 @@ brief lesson on
 explores three important landscape models that are commonly used. </p>
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/lidar-derived-products/lidarTree-height.png">
-  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/lidar-derived-products/lidarTree-height.png"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/lidar-derived-products/lidarTree-height.png">
+  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/lidar-derived-products/lidarTree-height.png"
 alt = "Image of the three most common LiDAR-derived products: Digital Surface Models (DSM), Digital Terain Models (DTM), and Canopy Height Models (CHM). The Digital Terrain Model allows scientist to study changes in terrair (topography) over time.">
   </a>
   <figcaption>Digital Terrain Models, Digital Surface Models and Canopy Height
@@ -267,43 +265,34 @@ event, we can get measurements of where the landscape changed.  </p>
 <p>First, we need to load the necessary R packages to work with raster files and 
 set our working directory to the location of our data. </p>
 
-<pre><code># load libraries
-library(raster)   # work with raster files
-library(rgdal)    # work with raster files
-
-## Set your working directory to ensure R can find the file we wish to import and where we want to save our files. Be sure to move the downloaded files into your working directory!
-wd &lt;- &quot;~/Git/data/&quot; # This will depend on your local environment
-setwd(wd)
-</code></pre>
-
-<p>Then we can read in two DTMs. The first DTM <code>preDTM3.tif</code> is a model from data
-collected 26-27 June 2013 and the <code>postDTM3.tif</code> is a model from data collected
+<p>Then we can read in two DTMs. The first DTM <code>preDTM3.tif</code> is a terrain model created from data
+collected 26-27 June 2013 and the <code>postDTM3.tif</code> is a terrain model made from data collected
 on 8 October 2013.  </p>
 
 <pre><code># Load DTMs into R
-DTM_pre &lt;- raster(paste0(wd,&quot;disturb-events-co13/lidar/pre-flood/preDTM3.tif&quot;))
-DTM_post &lt;- raster(paste0(wd,&quot;disturb-events-co13/lidar/post-flood/postDTM3.tif&quot;))
+DTM_pre &lt;- rast(paste0(wd,&quot;disturb-events-co13/lidar/pre-flood/preDTM3.tif&quot;))
+DTM_post &lt;- rast(paste0(wd,&quot;disturb-events-co13/lidar/post-flood/postDTM3.tif&quot;))
 
 # View raster structure
 DTM_pre
 
-## class      : RasterLayer 
-## dimensions : 2000, 2000, 4e+06  (nrow, ncol, ncell)
-## resolution : 1, 1  (x, y)
-## extent     : 473000, 475000, 4434000, 4436000  (xmin, xmax, ymin, ymax)
-## crs        : +proj=utm +zone=13 +datum=WGS84 +units=m +no_defs 
-## source     : /Users/olearyd/Git/data/disturb-events-co13/lidar/pre-flood/preDTM3.tif 
-## names      : preDTM3
+## class       : SpatRaster 
+## dimensions  : 2000, 2000, 1  (nrow, ncol, nlyr)
+## resolution  : 1, 1  (x, y)
+## extent      : 473000, 475000, 4434000, 4436000  (xmin, xmax, ymin, ymax)
+## coord. ref. : WGS 84 / UTM zone 13N (EPSG:32613) 
+## source      : preDTM3.tif 
+## name        : preDTM3
 
 DTM_post
 
-## class      : RasterLayer 
-## dimensions : 2000, 2000, 4e+06  (nrow, ncol, ncell)
-## resolution : 1, 1  (x, y)
-## extent     : 473000, 475000, 4434000, 4436000  (xmin, xmax, ymin, ymax)
-## crs        : +proj=utm +zone=13 +datum=WGS84 +units=m +no_defs 
-## source     : /Users/olearyd/Git/data/disturb-events-co13/lidar/post-flood/postDTM3.tif 
-## names      : postDTM3
+## class       : SpatRaster 
+## dimensions  : 2000, 2000, 1  (nrow, ncol, nlyr)
+## resolution  : 1, 1  (x, y)
+## extent      : 473000, 475000, 4434000, 4436000  (xmin, xmax, ymin, ymax)
+## coord. ref. : WGS 84 / UTM zone 13N (EPSG:32613) 
+## source      : postDTM3.tif 
+## name        : postDTM3
 </code></pre>
 
 <p>Among the information we now about our data from looking at the raster structure, 
@@ -317,13 +306,13 @@ The default azimuth for many hillshades is 315 degrees &ndash; to the NW.  </p>
 # In order to generate the hillshde, we need both the slope and the aspect of
 # the extent we are working on. 
 
-DTM_pre_slope &lt;- terrain(DTM_pre, opt=&quot;slope&quot;,units = &quot;radians&quot;)
-DTM_pre_aspect &lt;- terrain(DTM_pre, opt =&quot;aspect&quot;, units = &quot;radians&quot;)
-DTM_pre_hillshade &lt;- hillShade(DTM_pre_slope, DTM_pre_aspect)
+DTM_pre_slope &lt;- terrain(DTM_pre, v=&quot;slope&quot;, unit=&quot;radians&quot;)
+DTM_pre_aspect &lt;- terrain(DTM_pre, v=&quot;aspect&quot;, unit=&quot;radians&quot;)
+DTM_pre_hillshade &lt;- shade(DTM_pre_slope, DTM_pre_aspect)
 
-DTM_post_slope &lt;- terrain(DTM_post, opt=&quot;slope&quot;,units = &quot;radians&quot;)
-DTM_post_aspect &lt;- terrain(DTM_post, opt =&quot;aspect&quot;, units = &quot;radians&quot;)
-DTM_post_hillshade &lt;- hillShade(DTM_post_slope, DTM_post_aspect)
+DTM_post_slope &lt;- terrain(DTM_post, v=&quot;slope&quot;, unit=&quot;radians&quot;)
+DTM_post_aspect &lt;- terrain(DTM_post, v=&quot;aspect&quot;, unit=&quot;radians&quot;)
+DTM_post_hillshade &lt;- shade(DTM_post_slope, DTM_post_aspect)
 </code></pre>
 
 <p>Now we can plot the raster objects (DTM &amp; hillshade) together by using <code>add=TRUE</code>
@@ -335,7 +324,7 @@ through the second (DTM) plot, we also set a value between 0 (transparent) and 1
 plot(DTM_pre_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors for hillshade
         legend=FALSE,         # no legend, we don&#39;t care about the grey of the hillshade
-        main=&quot;Four Mile Canyon Creek, Boulder County\nPre-Flood&quot;,
+        main=&quot;Pre-Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)           # makes for a cleaner plot, if the coordinates aren&#39;t necessary
 
 plot(DTM_pre, 
@@ -351,7 +340,7 @@ plot(DTM_pre,
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  
         legend=FALSE,
-        main=&quot;Four Mile Canyon Creek, Boulder County\nPost-Flood&quot;,
+        main=&quot;Post-Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)
 
 plot(DTM_post, 
@@ -381,7 +370,7 @@ DTMs.  </p>
 DoD &lt;- DTM_post-DTM_pre
 
 plot(DoD,
-        main=&quot;Digital Elevation Model of Difference (DoD)&quot;,
+        main=&quot;Digital Elevation Model (DEM) Difference&quot;,
         axes=FALSE)
 </code></pre>
 
@@ -399,6 +388,8 @@ the values in the <code>DoD</code> raster object. </p>
 
 <pre><code># histogram of values in DoD
 hist(DoD)
+
+## Warning: [hist] a sample of25% of the cells was used
 </code></pre>
 
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/rfigs/hist-DoD-1.png" alt="Histogram of values showing the distribution of values in the Digital Elevation Model of Difference. The values are plotted on the X-axis and the frquency on the Y-axis."/></p>
@@ -436,7 +427,7 @@ difCol5 = c(&quot;#d7191c&quot;,&quot;#fdae61&quot;,&quot;#ffffbf&quot;,&quot;#a
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main=&quot;Elevation Change Post Flood\nFour Mile Canyon Creek, Boulder County&quot;,
+        main=&quot;Elevation Change Post-Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)
 
 # add the DoD to it with specified breaks &amp; colors
@@ -469,7 +460,7 @@ by manually drawing a box. </p>
 plot(DTM_post_hillshade,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main=&quot;Four Mile Canyon Creek, Boulder County\nPre-Flood&quot;,
+        main=&quot;Pre-Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)
 
 plot(DoD,
@@ -480,17 +471,17 @@ plot(DoD,
         add =T)
 
 # crop by designating two opposite corners
-cropbox1 &lt;- drawExtent()  
+cropbox1 &lt;- draw()  
 </code></pre>
 
 <figure>
-    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/disturb-events-co13/drawExtent.png">
-  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/dev-aten/graphics/disturb-events-co13/drawExtent.png"
+    <a href="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/disturb-events-co13/drawExtent.png">
+  <img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/graphics/disturb-events-co13/drawExtent.png"
   alt= "Plot of the Elevation change Post-flood in Four Mile Canyon Creek, Boulder County. Figure also includes crop window inlay around the area of interest.">
   </a>
 </figure>
 
-<p>After executing the <code>drawExtent()</code> function, we now physically click on the plot
+<p>After executing the <code>draw()</code> function, we now physically click on the plot
 at the two opposite corners of the box you want to crop to. You should see a 
 box drawn on the plot at this point.</p>
 
@@ -499,11 +490,7 @@ box drawn on the plot at this point.</p>
 <pre><code># view the extent of the cropbox1
 cropbox1
 
-## class      : Extent 
-## xmin       : 473814 
-## xmax       : 474982 
-## ymin       : 4434537 
-## ymax       : 4435390
+## [1]  473814  474982 4434537 4435390
 </code></pre>
 
 <p>It is a good idea to write this new extent down, so that you can use the extent
@@ -516,28 +503,28 @@ by creating an object that is a vector of the x min, x max, y min, and y max of
 the desired area. </p>
 
 <pre><code># desired coordinates of the box
-cropbox2&lt;-c(473792.6,474999,4434526,4435453)
+cropbox2 &lt;- c(473792.6,474999,4434526,4435453)
 </code></pre>
 
-<p>Once you have the crop box defined, either manually or using the coordinate, you 
-then crop the desired layer to the crop box. </p>
+<p>Once you have the crop box defined, either by manually clicking or by defining 
+the coordinates, you can crop the desired layer to the crop box. </p>
 
-<pre><code># crop desired layers to this cropbox
+<pre><code># crop desired layers to the cropbox2 extent
 DTM_pre_crop &lt;- crop(DTM_pre, cropbox2)
 DTM_post_crop &lt;- crop(DTM_post, cropbox2)
 DTMpre_hill_crop &lt;- crop(DTM_pre_hillshade,cropbox2)
 DTMpost_hill_crop &lt;- crop(DTM_post_hillshade,cropbox2)
 DoD_crop &lt;- crop(DoD, cropbox2)
 
-# plot all again using the cropped layers
+# plot the pre- and post-flood elevation + DEM difference rasters again, using the cropped layers
 
-# PRE
+# PRE-FLOOD (w/ hillshade)
 plot(DTMpre_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main=&quot;Four Mile Canyon Creek, Boulder County\nPre-Flood&quot;,
+        main=&quot;Pre-Flood Four Mile Canyon, Boulder County &quot;,
         axes=FALSE)
-# note \n in the title forces a line break in the title
+
 plot(DTM_pre_crop, 
         axes=FALSE,
         alpha=0.3,
@@ -546,12 +533,11 @@ plot(DTM_pre_crop,
 
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/rfigs/plot-crop-raster-1.png" alt="Raster Plot of the cropped section of Four Mile Creek, Boulder County."/></p>
 
-<pre><code># POST
-# plot Post-flood w/ hillshade
+<pre><code># POST-FLOOD (w/ hillshade)
 plot(DTMpost_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main=&quot;Four Mile Canyon Creek, Boulder County\nPost-Flood&quot;,
+        main=&quot;Post-Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)
 
 plot(DTM_post_crop, 
@@ -562,11 +548,11 @@ plot(DTM_post_crop,
 
 <p><img src="https://raw.githubusercontent.com/NEONScience/NEON-Data-Skills/main/tutorials/R/R-skills/Colorado-floods-data-visualization/NEON-Boulder-Flood-LiDAR-in-R/rfigs/plot-crop-raster-2.png" alt="Raster Plot of the cropped section of Four Mile Creek, Boulder County, Post-Flood."/></p>
 
-<pre><code># CHANGE - DoD
+<pre><code># ELEVATION CHANGE - DEM Difference
 plot(DTMpost_hill_crop,
         col=grey(1:90/100),  # create a color ramp of grey colors
         legend=FALSE,
-        main=&quot;Elevation Change Post Flood\nFour Mile Canyon Creek, Boulder County&quot;,
+        main=&quot;Elevation Change Post Flood Four Mile Canyon, Boulder County&quot;,
         axes=FALSE)
 
 plot(DoD_crop,
@@ -584,8 +570,7 @@ plot(DoD_crop,
 <h2>Additional Resources</h2>
 
 <ul>
-<li>How could you create a DoD, if you only have LiDAR from a single time point 
-but historical maps?  Check out 
+<li>How could you create a DEM difference if you only had LiDAR data from a single date, but you had historical maps?  Check out:
 <a href="http://people.cas.sc.edu/hodgsonm/Published_Articles_PDF/James_Hodgson_Ghoshal_Latiolais_DEM%20DIfferencing_Geomorphology2012.pdf" target="_blank"> Allen James et al. 2012. Geomorphic change detection using historic maps and 
 DEM differencing: The temporal dimension of geospatial analysis. Geomorphology 137:181-198</a>. </li>
 </ul>
